<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_recomendaciones_seguridad">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imv_banner_rec_seguridad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/banner_recomendaciones_seguridad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/rl_primera_rec"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/imv_banner_rec_seguridad">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/orange_1"
                    android:padding="10dp"
                    android:src="@drawable/icon_banco_rec" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:text="Cuando visite\nNUESTRAS AGENCIAS\nrecuerde"
                    android:textAlignment="textEnd"
                    android:textColor="@color/orange_1"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="60dp"
                    android:text="@string/info_recomendacion_agencia"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_segunda_rec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/rl_primera_rec">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/green_kelp"
                    android:padding="10dp"
                    android:src="@drawable/icon_cajero_rec" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:text="Cuando visite\nNUESTRAS CAJEROS\nrecuerde"
                    android:textAlignment="textEnd"
                    android:textColor="@color/green_kelp"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="60dp"
                    android:text="@string/info_recomendacion_cajerso"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_tercera_rec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/rl_segunda_rec">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/orange_1"
                    android:padding="10dp"
                    android:src="@drawable/icon_pin_rec" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:text="Respecto a su\nPIN"
                    android:textAlignment="textEnd"
                    android:textColor="@color/orange_1"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="60dp"
                    android:text="@string/info_recomendacion_pin"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>